crates/mineral-tui/src/components/layout/browse/lyrics/snapshots/lyrics_fallback_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics/panel.rs
description: "歌词:无当前歌 / 无缓存 → fallback"
expression: t.backend()
---
"╭ lyrics ──────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│              ♪ no lyrics             │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
