crates/mineral-tui/src/components/layout/browse/lyrics/snapshots/lyrics_immersive_manual_scroll_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics/panel.rs
description: "全屏歌词:脱离播放手动下滚 2 行(居中在锚定行,当前行离开正中)"
expression: t.backend()
---
"╭ lyrics · synced ✦ ───────────────────────────────── tr · [t] ╮"
"│                     僕の声を 抱えて歩いた                    │" Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " "), (29, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│                    将其怀揣于心后迈步而行                    │" Hidden by multi-width symbols: [(22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│                                                              │"
"│           太陽にあぶり出される  僕の孤独のカタチが           │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│            炙热的阳光照耀着万物 我所怀揣的那份孤独           │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│                                                              │"
"│                後ずさりするように  影になった                │" Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
"│                  似在不断后退 缩小为一团黑影                 │" Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " ")]
"│                                                              │"
"│         -  眩しすぎる正しさで 僕へと照りつけないで  -        │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│            所谓正确着实是耀眼 别让它映照在我的身上           │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│                                                              │"
"│                  遮ったこの腕 だけが僕を庇う                 │" Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " ")]
"│                   唯有遮挡强光的手在庇护我                   │" Hidden by multi-width symbols: [(21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│                                                              │"
"│             逃げるように駆け込んだゲームセンター             │" Hidden by multi-width symbols: [(15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
"│              似是为了逃避 我快步跑进了那家游戏厅             │" Hidden by multi-width symbols: [(16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
"│                                                              │"
"╰──────────────────────────────────────────────────────────────╯"
