crates/mineral-tui/src/components/layout/browse/lyrics/snapshots/lyrics_immersive_overscroll_bottom_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics/panel.rs
description: "全屏歌词:底部过冲帧(末行越过中心,下方露空白)"
expression: t.backend()
---
"╭ lyrics · synced ✦ ───────────────────────────────── tr · [t] ╮"
"│                                                              │"
"│       誰かが望む理想（いろ）には  僕は変われない だから      │" Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (52, " "), (54, " "), (56, " ")]
"│             无法顺应他人的期愿 去改变自己 所以说             │" Hidden by multi-width symbols: [(15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (45, " "), (47, " "), (49, " ")]
"│                                                              │"
"│            何度だって  這い出した 声抱えて 生きる            │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (37, " "), (39, " "), (41, " "), (43, " "), (46, " "), (48, " "), (50, " ")]
"│        我会将无数次爬出深渊的声音 怀揣于心 竭力活下去        │" Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (37, " "), (39, " "), (41, " "), (43, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " ")]
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"╰──────────────────────────────────────────────────────────────╯"
