crates/mineral-tui/src/components/layout/browse/lyrics/snapshots/lyrics_immersive_overscroll_top_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics/panel.rs
description: "全屏歌词:顶部过冲帧(首行离开上界,上方露空白)"
expression: t.backend()
---
"╭ lyrics · synced ✦ ───────────────────────────────── tr · [t] ╮"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│         地下鉄の窓に  急に映る顔が じっとこっちを見る        │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " ")]
"│                   地铁车窗上突然映出一张脸                   │" Hidden by multi-width symbols: [(21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│                                                              │"
"│   そのひどく不安気な目を 逸らすことも出来ず立ち尽くしていた  │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " ")]
"│ 目不转睛地看向了我 那双眼眸中充满惶恐不安 让我难以将视线移开 │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " ")]
"╰──────────────────────────────────────────────────────────────╯"
