crates/mineral-tui/src/components/layout/browse/lyrics/snapshots/lyrics_no_extra_hides_hint_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics/panel.rs
description: "歌词:无副歌词 → 右上无 [t] 提示"
expression: t.backend()
---
"╭ lyrics · synced ✦ ───────────────────────────────────────────╮"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                        它降落在你身旁                        │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│                        它降落在你身旁                        │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│                        它降落在你身上                        │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│                          来不及准备                          │" Hidden by multi-width symbols: [(28, " "), (30, " "), (32, " "), (34, " "), (36, " ")]
"│                          来不及后退                          │" Hidden by multi-width symbols: [(28, " "), (30, " "), (32, " "), (34, " "), (36, " ")]
"│                          来不及浪费                          │" Hidden by multi-width symbols: [(28, " "), (30, " "), (32, " "), (34, " "), (36, " ")]
"╰──────────────────────────────────────────────────────────────╯"
